Fix ios clock visibility bug

--- a/src/components/main/main.module.scss
+++ b/src/components/main/main.module.scss
@@ -48,4 +48,8 @@
 			flex-direction: column-reverse;
 		}
 	}
+	.clock {
+		display: block;
+		margin-bottom: -5px;
+	}
 }
