--- a/src/el/active-clock/active-clock.module.scss
+++ b/src/el/active-clock/active-clock.module.scss
@@ -1,6 +1,7 @@
 .clock {
 	&__root {
 		cursor: default;
+		width: 100%;
 	}
 	&__st0 {
 		fill: url(#SVGID_1_);
